<!--
	Project ... Final Project
	File ..	... activity_main.xml
	Name ..	... Gardner Seth Wilkenfeld	Credits: Much of the included code comes from the Android API and other internet resources
		including answers to similar problems on StackOverflow
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/my_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/my_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/device_list"
        android:layout_alignTop="@+id/my_device_icon"
        android:layout_toRightOf="@+id/my_device_icon"
        android:text="@string/device_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/my_device_icon"
        android:layout_alignRight="@+id/my_device_name"
        android:layout_below="@+id/my_device_icon"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />

    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_disconnect"
        android:layout_below="@+id/peers_title" >

    </ListView>

    <ImageView
        android:id="@+id/my_device_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_title"
        android:layout_below="@+id/my_title"
        android:contentDescription="@string/device_icon"
        android:src="@drawable/ic_device_icon" />

    <TextView
        android:id="@+id/peers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/device_list"
        android:layout_below="@+id/view1"
        android:text="@string/peers_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/my_device_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/my_device_icon"
        android:layout_alignLeft="@+id/my_device_name"
        android:text="@string/device_details"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/my_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/disconnect_peer_button" />

    <Button
        android:id="@+id/btn_start_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btn_start_camera"
        android:text="@string/get_gallery_button"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_start_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/my_title"
        android:text="@string/get_camera_button"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

</RelativeLayout>